click on div elements working for first four

--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Blocks</title>
+    <script src="jQuery.js"></script>
+    <script src="colorBlock.js"></script>
   </head>
   <body>
     <div class="color-counting">
       <p1 class="red-count">
-        Red Count:<span class="redNumber"> Red number</span>
+        Red Count:<span class="redNumber"> 0</span>
         <br></br>
       </p1>
       <p1 class="blue-count">
-        Blue Count:<span class="blueNumber"> Blue number</span>
+        Blue Count:<span class="blueNumber"> 0</span>
         <br></br>
       </p1>
       <p1 class="green-count">
-        Green Count:<span class="greenNumber"></span>
+        Green Count:<span class="greenNumber"> 0</span>
         <br></br>
       </p1>
       <p1 class="yellow-count">
-        Yellow Count:<span class="yellowNumber"></span>
+        Yellow Count:<span class="yellowNumber"> 0</span>
         <br></br>
       </p1>
     </div>
-    <div>
-      <p>Choose your color:</p>
-      <button class="js-button-redButton">Red</button>
+    <button class="js-button-redButton">Red</button>
       <button class="js-button-blueButton">Blue</button>
       <button class="js-button-greenButton">Green</button>
       <button class="js-button-yellowButton">Yellow</button>
+    <div>
+      <p>Choose your color:</p>
+      
     </div>
-    <div class="square red"></div>
-    <div class="square blue"></div>
-    <div class="square green"></div>
-    <div class="square yellow"></div>
+    <div class="container"></div>
+  
   </body>
 </html>
